--- a/simpledu/templates/base.html
+++ b/simpledu/templates/base.html
@@ -4,7 +4,9 @@
         <meta charset="UTF-8">
         <title>{% block title %}{% endblock %}</title>
         <link rel="stylesheet" href="https://cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap.min.css">
-        <link rel="stylesheet" href="static/main.css">
+        {% block head_css %}
+          <link rel="stylesheet" href="../static/css/main.css">
+        {% endblock %}
     </head>
     <body>
       <nav class="navbar navbar-inverse">
@@ -24,20 +26,44 @@
               <li><a href="#">直播</a></li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
-              <li><a href="{{ url_for('front.register') }}">注册</a></li>
-              <li><a href="{{ url_for('front.login') }}">登录</a></li>
+              {% if not current_user.is_authenticated %}
+                <li><a href="{{ url_for('front.register') }}">注册</a></li>
+                <li><a href="{{ url_for('front.login') }}">登录</a></li>
+              {% else %}
+                <li class="dropdown">
+                  <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
+                    {{ current_user.username }}<span class="caret"></span></a>
+                  <ul class="dropdown-menu">
+                    <li><a href="#">个人主页</a></li>
+                    <li role="separator" class="divider"></li>
+                    <li><a href="{{ url_for('front.logout') }}">退出登录</a></li>
+                  </ul>
+                </li>
+              {% endif %}
             </ul>
           </div>
         </div>
       </nav>
       <div class="container">
+        {% with messages = get_flashed_messages(with_categories=true) %}
+          {% if messages %}
+          {% for category, message in messages %}
+          <div class ="alert alert-{{ category }} alert-dismissble" role="alert">
+            <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+            {{ message }}
+          </div>
+          {% endfor %}
+          {% endif %}
+        {% endwith %}
         {% block body %}{% endblock %}
         {% block footer %}{% endblock %}
       </div>
       <!-- Bootstrap 依赖 jQuery -->
       <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
       <script src="https://cdn.bootcss.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-      <script src="static/main.js"></script>
+      {% block tail__js %}
+        <script src="static/main.js"></script>
+      {% endblock %}
     </body>    
 </html>
 
