--- a/simpledu/templates/register.html
+++ b/simpledu/templates/register.html
@@ -1,6 +1,13 @@
 {% extends "base.html" %}
+{% from "macros.html" import render_form %}
+
+{% block title %}
+Register
+{% endblock %}
 
 {% block body %}
-{{ form.csrf_token }}
-<h1>Register Page</h1>
+  <div class="form">
+    <h2>注册</h2>
+    {{ render_form(form, url_for('front.register')) }}
+  </div>
 {% endblock %}
